# MRM_MahekGupta

./: README.md  Task_1.md  quiz.cpp
C++ Course/course2/module1/: ex1.cpp  ex2.cpp  ex3.cpp  touch5.cpp  tx4.cpp
C++ Course/course2/module2/: ex1.cpp  ex2.cpp
C++ Course/course2/module3/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
C++ Course/course2/module4/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
C++ Course/course3/module1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
C++ Course/course3/module2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
C++ Course/couse1/week1/: ex4.cpp  ex5.cpp  lab1.cpp
C++ Course/couse1/week2/: ex1.cpp  ex3.cpp  ex4.cpp  ex5.cpp
C++ Course/couse1/week3/: ex1.cpp  ex3.cpp  ex5.cpp  lab.cpp
C++ Course/couse1/week4/: ex1.cpp  ex2.cpp  ex3.cpp  ex5.cpp  lab1.cpp
C++ Course/week1/: comment.c  ex1.cpp  ex2.cpp  ex3.cpp  print.cpp
C++ Course/week2/: ex2.cpp  lad1.cpp
C++ Course/week3/: ex2.cpp  ex4.cpp
C++ Course/week4/: ex4.cpp
github_task/: Task_3.md  Task_4_5.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/cpp/share/cpp/: package.sh
ros2_ws/install/cpp_pubsub/share/cpp_pubsub/: package.sh
ros2_ws/install/my_cashier_system/lib/my_cashier_system/: bill  bill_display_node  bill_publish_node  bill_publisher_node  bill_subscriber_node  manager_node  monitor_node
ros2_ws/install/my_cashier_system/share/my_cashier_system/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/my_package/share/my_package/: package.sh  package.xml
ros2_ws/install/my_robot_controller/share/my_robot_controller/: package.sh  package.xml
ros2_ws/install/tutorial_interfaces/share/tutorial_interfaces/: package.sh
ros2_ws/install/tutorial_interfaces/share/tutorial_interfaces/cmake/: export_tutorial_interfaces__rosidl_generator_pyExport.cmake  tutorial_interfaces__rosidl_typesupport_cExport.cmake  tutorial_interfaces__rosidl_typesupport_cppExport.cmake
ros2_ws/install/tutorial_interfaces/share/tutorial_interfaces/msg/: Num.msg
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/install/cpp/share/cpp/: package.sh  package.xml
ros2_ws/src/install/cpp_pubsub/share/cpp_pubsub/: package.sh
ros2_ws/src/install/my_cashier_system/share/my_cashier_system/: package.bash  package.dsv  package.ps1  package.sh
ros2_ws/src/install/my_package/share/my_package/: local_setup.sh  package.sh
ros2_ws/src/log/: latest_build
ros2_ws/src/my_cashier_system/: CMakeLists.txt  package.xml
ros2_ws/src/my_cashier_system/include/my_cashier_system/: bill_display_node.hpp  bill_publish_node.hpp  bill_publisher_node.hpp
ros2_ws/src/my_cashier_system/src/: bill_display_node.cpp  bill_publish_node.cpp  bill_subscriber_node.cpp
ros2_ws/src/tutorial_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/tutorial_interfaces/srv/: UpdateInventory.srv
rover_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rover_ws/install/my_rover/share/my_rover/: package.sh
rover_ws/log/: latest_build  latest_list
rover_ws/src/my_rover/: CMakeLists.txt  package.xml
rover_ws/src/my_rover/launch/: gazebo.launch.py  gps_navigatior.launch.py  robot.launch.py
rover_ws/src/my_rover/src/: gps_navigator.cpp  obstacle.cpp
rover_ws/src/my_rover/urdf/: cam.xacro  imu.xacro  robot.urdf.xacro  stereo.xacro
rover_ws/src/my_rover/worlds/: obstacle_world.worlds
(+27 files in other folders)
